modal na pesquisa

--- a/Cap.Web/Areas/Erp/Views/Parcela/Parcelas.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Parcela/Parcelas.cshtml
@@ -113,7 +113,7 @@
             @Html.DisplayFor(modelItem => item.NNPor)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.IdFpgto)
+            @Html.DisplayFor(modelItem => item.Fpgto.Descricao)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Observ)
