--- a/Cap.Web/Areas/Erp/Views/Pesquisa/Index.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Pesquisa/Index.cshtml
@@ -7,6 +7,10 @@
 
 <h2>Pesquisa</h2>
 
+<p>
+    @Html.ActionLink("Novo pedido", "Create")
+</p>
+
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
