--- a/Cap.Web/Areas/Erp/Views/Parcela/Parcelas.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Parcela/Parcelas.cshtml
@@ -1,16 +1,10 @@
 ﻿@model IEnumerable<Cap.Domain.Models.Cap.Parcela>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    <a href="#" id="incluirParcela" data-id="@ViewBag.IdPedido">Incluir parcelas</a>
 </p>
 <table class="table">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.IdEmpresa)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IdPedido)
-        </th>
         <th>
             @Html.DisplayNameFor(model => model.Vencto)
         </th>
@@ -21,19 +15,7 @@
             @Html.DisplayNameFor(model => model.IdPgto)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.IdDeposito)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.EmissaoPre)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.NN)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.NNData)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.NNPor)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.IdFpgto)
@@ -45,37 +27,10 @@
             @Html.DisplayNameFor(model => model.Liberado)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.LiberadoPor)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LiberadoEm)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IdMoeda)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CriadoEm)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CriadoPor)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.LibMaster)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.LibMasterPor)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LibMasterEm)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.Ativo)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AlteradoPor)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AlteradoEm)
         </th>
         <th></th>
     </tr>
@@ -83,34 +38,17 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.IdEmpresa)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.IdPedido)
-        </td>
-        <td>
             @Html.DisplayFor(modelItem => item.Vencto)
         </td>
         <td>
+            @Html.DisplayFor(modelItem => item.Moeda.Descricao)
             @Html.DisplayFor(modelItem => item.Valor)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.IdPgto)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.IdDeposito)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.EmissaoPre)
+            @Html.DisplayFor(modelItem => item.Pgto.Descricao)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.NN)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NNData)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NNPor)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Fpgto.Descricao)
@@ -122,48 +60,50 @@
             @Html.DisplayFor(modelItem => item.Liberado)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.LiberadoPor)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LiberadoEm)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.IdMoeda)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CriadoEm)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CriadoPor)
-        </td>
-        <td>
             @Html.DisplayFor(modelItem => item.LibMaster)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LibMasterPor)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LibMasterEm)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Ativo)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.AlteradoPor)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AlteradoEm)
-        </td>
-        <td>
             <button class="btn btn-default details" data-id="@item.Id"><i class="glyphicon glyphicon-file"></i></button>
             <button class="btn btn-danger delete" data-id="@item.Id"><i class="glyphicon glyphicon-trash"></i></button>
             <button class="btn btn-primary edit" data-id="@item.Id"><i class="glyphicon glyphicon-edit"></i></button>
-
-            <br />
-            <div class="details">Teste</div>
         </td>
     </tr>
 }
 
 </table>
-}
+
+<div class="modal" id="modal">
+
+</div>
+
+<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+<script type="text/javascript">
+    $(document).ready(function () {
+
+        $("#incluirParcela").click(function () {
+            var idPedido = $(this).attr("data-id");
+            $("#modal").load("/Erp/Parcela/ParcelaAdiciona?idPedido=" + idPedido, function () {
+                $("#modal").toggle();
+            });
+
+            $('#modal').on('shown.bs.modal', function () {
+                $('#Valor').focus();
+            })
+        });
+
+        //$("#gravarParcelas").click(function () {
+        //    var idPedido = $("#IdPedido").val();
+        //    $("#parcelas").load("/Erp/Parcela/AdicionarParcelas?idPedido=" + idPedido, function () {
+        //        $("#modal").toggle();
+        //    });
+
+        //    $('#modal').on('shown.bs.modal', function () {
+        //        $('#Valor').focus();
+        //    })
+        //});
+
+    });
+</script>
