--- a/Cap.Web/Areas/Erp/Views/Pesquisa/Index.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Pesquisa/Index.cshtml
@@ -8,7 +8,7 @@
 <h2>Pesquisa</h2>
 
 <p>
-    @Html.ActionLink("Novo pedido", "Create")
+    @Html.ActionLink("Novo pedido", "Create", "Pedido")
 </p>
 
 @using (Html.BeginForm())
