--- a/Cap.Web/Areas/Erp/Views/Pesquisa/Details.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Pesquisa/Details.cshtml
@@ -7,7 +7,7 @@
 <div class="modal-dialog">
     <div class="modal-content">
         <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+            <button type="button" class="close close-modal" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
             <h4 class="modal-title">Parcela do pedido n<sup>o</sup> @Model.IdPedido</h4>
         </div>
         <div class="modal-body">
@@ -160,7 +160,7 @@
             </dl>
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+            <button type="button" class="btn btn-default close-modal" data-dismiss="modal">Fechar</button>
         </div>
     </div><!-- /.modal-content -->
 </div><!-- /.modal-dialog -->
