--- a/Cap.Web/Areas/Erp/Views/Parcela/ParcelaAdiciona.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Parcela/ParcelaAdiciona.cshtml
@@ -1,14 +1,14 @@
 ﻿@using Cap.Web.Common.Bind;
 @model Cap.Domain.Models.Cap.ParcelaAdicionaModel
-@{ 
-    // TODO: deposito....
+@{
+// TODO: deposito....
 }
 
 <div class="modal-dialog">
     <div class="modal-content">
         <div class="modal-header">
             <button type="button" class="close close-modal" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
-            <h4 class="modal-title">Adicionar parcelas no pedido n<sup>o</sup> @ViewBag.IdPedido</h4>
+            <h4 class="modal-title">Inclusão de parcelas</h4>
         </div>
         <div class="modal-body">
 
@@ -23,8 +23,7 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.Valor, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.SelectMoeda(Model.IdMoeda)
-                            @Html.EditorFor(model => model.Valor, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.SelectMoeda(Model.IdMoeda) @Html.EditorFor(model => model.Valor, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.Valor, "", new { @class = "text-danger" })
                         </div>
                     </div>
