--- a/Cap.Web/Areas/Erp/Views/CentroLucro/Index.cshtml
+++ b/Cap.Web/Areas/Erp/Views/CentroLucro/Index.cshtml
@@ -1,13 +1,13 @@
-﻿@model IEnumerable<Cap.Domain.Models.Cap.GrupoCusto>
+﻿@model IEnumerable<Cap.Domain.Models.Cap.CentroLucro>
 
 @{
-    ViewBag.Title = "Grupos de custos";
+    ViewBag.Title = "Centros de lucros";
 }
 
-<h2>Grupos de custos</h2>
+<h2>Centros de lucros</h2>
 
 <p>
-    @Html.ActionLink("Novo grupo de custo", "Create")
+    @Html.ActionLink("Novo centro de lucro", "Create")
 </p>
 <table class="table">
     <tr>
@@ -29,12 +29,13 @@
             @Html.DisplayFor(modelItem => item.Ativo)
         </td>
         <td>
-            @Html.ActionLink("Editar", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Detalhes", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Excluir", "Delete", new { id=item.Id }) |
-            @Html.ActionLink("Centro de custos", "Index", "CentroCusto", new { id=item.Id }, null)
+            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
         </td>
     </tr>
 }
 
 </table>
+
+@Html.ActionLink("Voltar", "Index", new { id = ViewBag.IdGrupoLucro })
