--- a/Cap.Web/Areas/Erp/Views/CentroLucro/Index.cshtml
+++ b/Cap.Web/Areas/Erp/Views/CentroLucro/Index.cshtml
@@ -7,10 +7,13 @@
 <h2>Centros de lucros</h2>
 
 <p>
-    @Html.ActionLink("Novo centro de lucro", "Create")
+    @Html.ActionLink("Novo centro de lucro", "Create", new { idGrupoLucro = (int)ViewBag.idGrupoLucro })
 </p>
 <table class="table">
     <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.IdGrupoLucro)
+        </th>
         <th>
             @Html.DisplayNameFor(model => model.Descricao)
         </th>
@@ -23,15 +26,18 @@
 @foreach (var item in Model) {
     <tr>
         <td>
+            @Html.DisplayFor(modelItem => item.GrupoLucro.Descricao)
+        </td>
+        <td>
             @Html.DisplayFor(modelItem => item.Descricao)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Ativo)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Editar", "Edit", new { id=item.Id }) |
+            @Html.ActionLink("Detalhes", "Details", new { id=item.Id }) |
+            @Html.ActionLink("Excluir", "Delete", new { id=item.Id })
         </td>
     </tr>
 }
