--- a/Cap.Web/Areas/Erp/Views/ContaFinanceira/Details.cshtml
+++ b/Cap.Web/Areas/Erp/Views/ContaFinanceira/Details.cshtml
@@ -26,6 +26,22 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.TipoConta)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.TipoConta)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Contabiliza)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Contabiliza)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Ativo)
         </dt>
 
