--- a/Cap.Web/Areas/Erp/Views/ContaFinanceira/Index.cshtml
+++ b/Cap.Web/Areas/Erp/Views/ContaFinanceira/Index.cshtml
@@ -18,7 +18,10 @@
             @Html.DisplayNameFor(model => model.Descricao)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Credito)
+            @Html.DisplayNameFor(model => model.TipoConta)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Contabiliza)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Ativo)
@@ -33,6 +36,12 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Descricao)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.TipoConta)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Contabiliza)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Ativo)
