--- a/Cap.Web/Areas/Erp/Views/GrupoFinanceiro/Index.cshtml
+++ b/Cap.Web/Areas/Erp/Views/GrupoFinanceiro/Index.cshtml
@@ -31,7 +31,8 @@
         <td>
             @Html.ActionLink("Editar", "Edit", new { id=item.Id }) |
             @Html.ActionLink("Detalhes", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Excluir", "Delete", new { id=item.Id })
+            @Html.ActionLink("Excluir", "Delete", new { id=item.Id }) |
+            @Html.ActionLink("Contas financeiras", "Index", "ContaFinanceira", new { id=item.Id }, null)
         </td>
     </tr>
 }
