--- a/Cap.Web/Areas/Erp/Views/ContaFinanceira/Create.cshtml
+++ b/Cap.Web/Areas/Erp/Views/ContaFinanceira/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model Cap.Domain.Models.Cap.ContaFinanceira
+﻿@using Cap.Web.Common.Bind;
+@model Cap.Domain.Models.Cap.ContaFinanceira
 
 @{
     ViewBag.Title = "Conta financeira";
@@ -28,7 +29,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.TipoConta, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.TipoConta, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TipoConta(Model.TipoConta)
                 @Html.ValidationMessageFor(model => model.TipoConta, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -44,23 +45,13 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Ativo, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.Ativo)
-                    @Html.ValidationMessageFor(model => model.Ativo, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-
-        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Incluir" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
-
+    
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Voltar", "Index", new { id = Model.IdGrupoFinanceiro })
 </div>
