--- a/Cap.Web/Areas/Erp/Views/ContaFinanceira/Details.cshtml
+++ b/Cap.Web/Areas/Erp/Views/ContaFinanceira/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model Cap.Domain.Models.Cap.ContaFinanceira
+﻿@using System.ComponentModel.DataAnnotations;
+@model Cap.Domain.Models.Cap.ContaFinanceira
 
 @{
     ViewBag.Title = "Conta financeira";
