--- a/Cap.Web/Areas/Erp/Views/ContaFinanceira/Edit.cshtml
+++ b/Cap.Web/Areas/Erp/Views/ContaFinanceira/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model Cap.Domain.Models.Cap.ContaFinanceira
+﻿@using Cap.Web.Common.Bind;
+@model Cap.Domain.Models.Cap.ContaFinanceira
 
 @{
     ViewBag.Title = "Edit";
@@ -24,6 +25,24 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Descricao, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Descricao, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.TipoConta, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TipoConta(Model.TipoConta)
+                @Html.ValidationMessageFor(model => model.TipoConta, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Contabiliza, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <div class="checkbox">
+                    @Html.EditorFor(model => model.Contabiliza)
+                    @Html.ValidationMessageFor(model => model.Contabiliza, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
 
