--- a/Cap.Web/Areas/Erp/Views/Empresa/Delete.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Empresa/Delete.cshtml
@@ -120,16 +120,16 @@
             @Html.DisplayNameFor(model => model.Ativo)
         </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Ativo)
-        </dd>
-
         <dt>
-            @Html.DisplayNameFor(model => model.AlteradoPor)
+            @Html.DisplayNameFor(model => model.RegimeTributario)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Usuario.Nome)
+            @Html.DisplayFor(model => model.RegimeTributario.Descricao)
+        </dd>
+
+        <dd>
+            @Html.DisplayFor(model => model.Ativo)
         </dd>
 
         <dt>
