--- a/Cap.Web/Areas/Erp/Views/Empresa/Details.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Empresa/Details.cshtml
@@ -114,19 +114,19 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.RegimeTributario)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.RegimeTributario.Descricao)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Ativo)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.Ativo)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.AlteradoPor)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Usuario.Nome)
         </dd>
 
         <dt>
