--- a/Cap.Web/Areas/Erp/Views/ContaFinanceira/Delete.cshtml
+++ b/Cap.Web/Areas/Erp/Views/ContaFinanceira/Delete.cshtml
@@ -84,7 +84,7 @@
         @Html.HiddenFor(model => model.Id)
 
         <div class="form-actions no-color">
-            <input type="submit" value="Excluir" class="btn btn-default" /> |
+            <input type="submit" value="Excluir" class="btn btn-danger" /> |
             @Html.ActionLink("Voltar", "Index", new { id = Model.IdGrupoFinanceiro })
         </div>
     }
