--- a/Cap.Web/Areas/Erp/Views/Empresa/Create.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Empresa/Create.cshtml
@@ -111,6 +111,13 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.RegimeTributario, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.SelectRegimeTributario()
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.ECnpjVencto, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.ECnpjVencto, new { htmlAttributes = new { @class = "form-control" } })
